<resources>
    <string name="app_name">MyWallet</string>


    <!-- String Login -->
    <string name="til_username">Nome do usuário</string>
    <string name="til_password">Senha</string>
    <string name="btn_login">Login</string>
    <string name="tv_info">Não tem conta? Cadastre-se</string>


    <string name="first_fragment">Fragmento 1</string>
    <string name="second_fragment">Fragmento 2</string>
    <string name="titleCadastrar">Cadastrar</string>
    <string name="tilEmail">E-mail</string>
    <string name="tilConfirmPassword">Confirmar senha</string>
    <string name="btnCadastrar">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_home">Home</string>
    <string name="tvEntrada">Entradas</string>
    <string name="tvGasto">Gastos</string>
    <string name="descricao">Descrição</string>
    <string name="categoria">Categoria</string>
    <string name="datahora">Data-Hora</string>
    <string name="valor">Valor</string>
    <string name="btnCadastrarEntrada">Cadastrar</string>

    <!-- String profile -->
    <string name="Notification">Notificação</string>
    <string name="Historico">Historico</string>
    <string name="Sincronizacao">Sincronização</string>
    <string name="Exportar">Exportar Dados</string>
    <string name="BotaoProfile">Editar Perfil</string>
    <string name="titleProfile">Perfil</string>
</resources>