<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:layout_margin="20dp"
    android:background="@drawable/round_login_body"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="105dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/include2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile_dark">

        </ImageView>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nome_user"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                tools:ignore="MissingClass">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/idade_user"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                tools:ignore="MissingClass">

            </com.google.android.material.textview.MaterialTextView>
        </TableLayout>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        tools:ignore="ExtraText">


        <CheckBox
            android:id="@+id/checkbox_notifica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/Notification" />

        <CheckBox
            android:id="@+id/checkbox_historico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/Historico" />

        <CheckBox
            android:id="@+id/checkbox_sinc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/Sincronizacao" />

        <CheckBox
            android:id="@+id/checkbox_exportaDados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/Exportar" />

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/botao_customizado"
            android:text="@string/BotaoProfile" />
    </LinearLayout>
</LinearLayout>
